[gd_scene load_steps=24 format=1]

[ext_resource path="res://scripts/level1.gd" type="Script" id=1]
[ext_resource path="res://assets/botoes/pause.png" type="Texture" id=2]
[ext_resource path="res://assets/item/red_bucket.png" type="Texture" id=3]
[ext_resource path="res://assets/item/red_bucket0.png" type="Texture" id=4]
[ext_resource path="res://assets/item/green_bucket.png" type="Texture" id=5]
[ext_resource path="res://assets/item/green_bucket0.png" type="Texture" id=6]
[ext_resource path="res://assets/item/blue_bucket.png" type="Texture" id=7]
[ext_resource path="res://assets/item/blue_bucket0.png" type="Texture" id=8]
[ext_resource path="res://assets/modal/1758033.jpg" type="Texture" id=9]
[ext_resource path="res://assets/sound/bubble.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/font/poetson-60.fnt" type="BitmapFont" id=11]
[ext_resource path="res://assets/sound/out.ogg" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 494.527, 0.735718 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 55.9683, 6.42834 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 6.70578, 118.578 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=6]

custom_solver_bias = 0.0
a = Vector2( 63.4235, 20.1095 )
b = Vector2( 57.5714, 138.32 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 57.7804, 10 )

[sub_resource type="SegmentShape2D" id=8]

custom_solver_bias = 0.0
a = Vector2( -12.0851, 257.905 )
b = Vector2( -13.5258, 153.824 )

[sub_resource type="SegmentShape2D" id=9]

custom_solver_bias = 0.0
a = Vector2( -21.9517, 217.309 )
b = Vector2( -21.9517, 125.254 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 53.4858, 10 )

[sub_resource type="SegmentShape2D" id=11]

custom_solver_bias = 0.0
a = Vector2( 6.34027, 111.832 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=12]

custom_solver_bias = 0.0
a = Vector2( -105.036, 391.6 )
b = Vector2( -91.8156, 272.964 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 11.7145, 1654.33 )

[node name="level1" type="Node2D"]

script/script = ExtResource( 1 )

[node name="btnPause" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 752.009, 2.58955 )
transform/scale = Vector2( 1.75312, 1.75312 )
z/z = 1
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="geraPlataform" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="platforms" type="Node2D" parent="."]

z/z = 2

[node name="balls" type="Position2D" parent="."]

transform/pos = Vector2( 498.532, 39.4887 )
transform/scale = Vector2( 34.7982, 1 )
z/z = 2

[node name="geraBalls" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="loseArea" type="Area2D" parent="."]

transform/pos = Vector2( 62.9202, 1624.48 )
transform/rot = 0.0402792
z/z = 2
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 441.658, 70.1185 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="loseArea"]

transform/pos = Vector2( 441.658, 70.1185 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="colorR" type="Area2D" parent="."]

editor/display_folded = true
z/z = 2
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 181.063, 1687.32 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 110.96, 1573.59 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 6 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 180.811, 1560.72 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="colorR"]

transform/pos = Vector2( 60.246, 1452.68 )
z/z = 30
texture = ExtResource( 3 )
centered = false

[node name="Sprite1" type="Sprite" parent="colorR"]

transform/pos = Vector2( 60.246, 1453.68 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="colorR"]

transform/pos = Vector2( 181.063, 1687.32 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="colorR"]

transform/pos = Vector2( 110.96, 1573.59 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="colorR"]

transform/pos = Vector2( 180.811, 1560.72 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 2

[node name="colorG" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -87.5424, 2.7075 )
z/z = 2
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 596.434, 1680.46 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 8 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 549.633, 1430.53 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 9 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 671.773, 1454.58 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="colorG"]

transform/pos = Vector2( 595.885, 1573.28 )
z/z = 30
texture = ExtResource( 5 )

[node name="Sprite1" type="Sprite" parent="colorG"]

transform/pos = Vector2( 595.327, 1573.8 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colorG"]

transform/pos = Vector2( 596.434, 1680.46 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="colorG"]

transform/pos = Vector2( 549.633, 1430.53 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="colorG"]

transform/pos = Vector2( 671.773, 1454.58 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 2

[node name="colorB" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -54.1499, -0.902496 )
z/z = 2
input/pickable = true
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 879.027, 1683.48 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 11 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 820.595, 1565.14 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 12 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 1037.31, 1300.96 )
shapes/2/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="colorB"]

transform/pos = Vector2( 876.587, 1580.53 )
z/z = 30
texture = ExtResource( 7 )

[node name="Sprite1" type="Sprite" parent="colorB"]

transform/pos = Vector2( 876.587, 1581.17 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colorB"]

transform/pos = Vector2( 879.027, 1683.48 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="colorB"]

transform/pos = Vector2( 820.595, 1565.14 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 1

[node name="CollisionShape2D 3" type="CollisionShape2D" parent="colorB"]

transform/pos = Vector2( 1037.31, 1300.96 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

editor/display_folded = true
z/z = 2
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1000, 0 )
transform/rot = -0.546221
z/z = 2
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D1"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="atualizaPlacar" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="fundo" type="Sprite" parent="."]

transform/pos = Vector2( 657.065, 889.505 )
transform/scale = Vector2( 3.97158, 3.97158 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="bucketSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Node2D" type="Node2D" parent="."]

editor/display_folded = true
z/z = 2

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="placar" type="Label" parent="Node2D/Control"]

rect/rotation = 0.349057
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 40.0
margin/right = 80.0
margin/bottom = 102.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.12739, 0.480469, 0.0769501, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="outSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 12 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="btnPause" to="." method="_on_btnPause_pressed"]

[connection signal="timeout" from="geraPlataform" to="." method="_on_geraPlataform_timeout"]

[connection signal="timeout" from="geraBalls" to="." method="_on_geraBalls_timeout"]

[connection signal="body_enter" from="loseArea" to="." method="_on_Area2D_body_enter"]

[connection signal="body_enter" from="colorR" to="." method="_on_colorR_body_enter"]

[connection signal="body_enter" from="colorG" to="." method="_on_colorG_body_enter"]

[connection signal="body_enter" from="colorB" to="." method="_on_colorB_body_enter"]

[connection signal="timeout" from="atualizaPlacar" to="." method="_on_atualizaPlacar_timeout"]


